# linux-wallpaperengine-noctalia

./: AGENTS.md  README.ja.md  README.md  README.zh.md  config  pyproject.toml  wallpaper-manager-gtk.desktop  wallpaper-manager-gtk.py
wallpaper_manager/: __init__.py  __main__.py  cli.py  gtk.py  i18n.py  models.py  startup.py
wallpaper_manager/config/: __init__.py  constants.py  store.py
wallpaper_manager/services/: __init__.py  system.py  wallpapers.py
wallpaper_manager/ui/: __init__.py  app.py  mvi.py  rows.py  view_models.py  window.py
